--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -15,11 +15,7 @@
 }
   
    
-.app__About-title{
-    max-width: 500px;
-    margin-top: 100px;
-     
-    &-title {
+.app__About-title-title {
         margin-bottom: 8px; 
         font-size: 28px;
         font-weight: 600;
@@ -34,42 +30,6 @@
             margin-bottom: 8px;
         }
     }
-      
-    &-info {
-        font-size: 16px;
-        font-weight: 400;
-        color: var(--primary-color);
-        line-height: 1.6rem;
-  
-        @media screen and (max-width: 900px) {
-            margin-left: 1rem;
-        }
-  
-        @media screen and (max-width: 450px) {
-            font-size: 1rem;
-        }
-    }
-    
-    @media screen and (max-width: 450px) {
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-}
-  
-.app__About-blink {
-    font-size: 16px;
-    font-weight: 700;
-    text-align: left;
-    color: var(--primary-color);
-    user-select: none;
-    visibility: hidden;
-    animation: blink .85s infinite;
-    animation-delay: 2s;
-  
-    @media screen and (max-width: 450px) {
-        font-size: 1rem;
-    }
-}
 
 .app__About-desc {
     align-items: center;
