--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,154 +1,63 @@
 .app__header {
-    position: relative;
-    overflow: hidden;
-    user-select: none;
-    background-color: var(--primary-color);
+  position: relative;
+  overflow: hidden;
+  user-select: none;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.app__header-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-    img {
-        opacity: 0.7;
-        width: 760px;
-    }
-}
+.app__header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  max-width: 1300px;
+  padding-left:100px;
+  position: relative;
 
-.app__header-info {
-    min-height: 100vh;
-    margin-left: 90px;
-    flex: 1;
-    display: flex;
+  @media screen and (max-width: 900px) {
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    z-index: 2;
-    max-width:440px;
-    
-    @media screen and (max-width: 900px) {
-      margin-left: 50px;
-    }
-  
-    @media screen and (max-width: 450px) {
-      margin-left: 1rem;
-    }
+    text-align: center;
+  }
 }
-  
+
 .app__header-head-text {
-    margin-bottom: 40px;
-    line-height: 6rem;
-    font-size: 3.5rem;
-    font-weight: 600;
-    text-align: left;
-    color: var(--secondary-color);
-    user-select: none;
-  
-    @media screen and (max-width: 750px) {
-      font-size: 3rem;
-      line-height: 5rem;
-      width:400px;
-    }
-  
-    @media screen and (max-width: 550px) {
-      font-size: 2rem;
-      width:250px;
-      line-height: 3rem;
-    }
+  font-size: 5.8rem;
+  font-weight: 900;
+  color: var(--secondary-color);
+  max-width: 650px;
+  line-height: 6.5rem;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  z-index: 1;
+
+  @media screen and (max-width: 750px) {
+    font-size: 3rem;
+  }
+
+  @media screen and (max-width: 550px) {
+    font-size: 2rem;
+    max-width: 300px;
+  }
 }
-  
-.app__header-description {
-      display: flex;
-      flex-direction: column;
-      width: auto;
-      align-items: flex-start;
-      user-select: none;
-      letter-spacing: 0.1px;
-      visibility: hidden;
-  
-      &-text1 {
-        font-size: 1.5rem;
-        color: var(--secondary-color);
-        margin-bottom: 24px;
-        animation: textAnimation 3s forwards 3.8s;
-  
-        @media screen and (max-width: 744px) {
-          font-size: 1.5rem;
-        }
-  
-        @media screen and (max-width: 450px) {
-          font-size: 1.3rem;
-          margin-bottom: 15px;
-        }
-      }
-  
-      &-text2 {
-        font-size: 1.5rem;
-        color: var(--secondary-color);
-        margin-bottom: 24px;
-        animation: textAnimation 3s forwards 4.2s;
-  
-        @media screen and (max-width: 744px) {
-          font-size: 1.5rem;
-        }
-  
-        @media screen and (max-width: 450px) {
-          font-size: 1.3rem;
-          margin-bottom: 15px;
-        }
-      }
-  
-      &-text3 {
-        font-size: 1.5rem;
-        color: var(--secondary-color);
-        margin-bottom: 24px;
-        animation: textAnimation 3s forwards 4.6s;
-  
-        @media screen and (max-width: 744px) {
-          font-size: 1.5rem;
-        }
-  
-        @media screen and (max-width: 450px) {
-          font-size: 1.3rem;
-          margin-bottom: 15px;
-        }
-      }
+
+.light-gray {
+  color: var(--lightGray-color);
 }
-  
-@keyframes textAnimation {
-    0% {
-      visibility: hidden;
-      transform: translateX(-150px);
-    }
-    100% {
-      visibility: visible;
-      transform: translateX(0);
-    }
-}
-  
-.blink {
-    font-size: 1.5rem;
-    font-weight: 700;
-    text-align: left;
-    color: var(--secondary-color);
-    user-select: none;
-    visibility: hidden;
-    animation: blink .7s infinite;
-    animation-delay: 8s;
-  
-    @media screen and (max-width: 450px) {
-      font-size: 0.8rem;
-    }
-}
-  
-@keyframes blink {
-    0% {
-      opacity: 1;
-      visibility: visible;
-    }
-    100% {
-      opacity: 0;
-      visibility: hidden;
-    }
+
+.app__header-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url('../../assets/andrematos_creative_photo.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+  z-index: 0;
 }
