--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,9 +3,6 @@
     position: fixed;
     width: 100%;
     z-index: 10;
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
-    background: rgba(1, 1, 1, 0.384);
     height:55px;
     display: flex;
     align-items: center;
@@ -23,18 +20,13 @@
     align-items: center;
     flex-direction: row;
     justify-content: center;
-
-    img {
-        width: 40px;
-        margin-right: 8px;
-    }
     
     a {
         display: flex;
         align-items: center;
-        font-size: 14px;
-        font-weight: 500;
-        color: var(--secondary-color);
+        font-size: 1.3rem;
+        font-weight: 800;
+        color: var(--lightGray-color);
         text-decoration: none;
         max-width: 160px;
     }
@@ -53,14 +45,14 @@
         cursor: pointer;
 
         a {
-            color: var(--secondary-color);
+            color: var(--lightGray-color);
             text-decoration: none;
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 900;
             transition: all 0.3s ease-in-out;
 
             &:hover {
-                color: var(--hover-color);
+                color: var(--secondary-color);
             }
 
         }
@@ -74,7 +66,7 @@
                 bottom: -3px; 
                 width: 100%;
                 height: 1.4px; 
-                background-color: var(--secondary-color);
+                background-color: var(--lightGray-color);
                     transform: scaleX(1);
             }
         }
