--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -9,13 +9,10 @@
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
+    z-index: 1;
   }
   
-  .app__Work-title {
-    max-width: 420px;
-    margin-top: 40px;
-    
-    &-title {
+  .app__Work-title-title {
       margin-bottom: 8px; 
       font-size: 28px;
       font-weight: 600;
@@ -32,40 +29,6 @@
       }
     }
       
-    &-info {
-      font-size: 16px;
-      font-weight: 400;
-      color: var(--primary-color);
-      line-height: 1.6rem;
-  
-      @media screen and (max-width: 900px) {
-        margin-left: 1rem;
-      }
-  
-      @media screen and (max-width: 450px) {
-        font-size: 1rem;
-      }
-    }
-    @media screen and (max-width: 450px) {
-      margin-top: 0px;
-      margin-left: 0px;
-    }
-  }
-  
-  .app__Work-blink {
-    font-size: 16px;
-    font-weight: 700;
-    text-align: left;
-    color: var(--primary-color);
-    user-select: none;
-    visibility: hidden;
-    animation: blink .85s infinite;
-    animation-delay: 2s;
-  
-    @media screen and (max-width: 450px) {
-      font-size: 1rem;
-    }
-  }
   
   .app__Work-cards-container{
     display: flex;
@@ -128,4 +91,18 @@
   
   .app__Work-card:hover .card-description {
     transform: translateY(0);
+  }
+
+  .app__Work-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url('../../assets/header_background.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.6;
+    z-index: 0;
   }
