--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --font-base: "Montserrat", sans-serif;
-    --primary-color: #0A090C;
-    --secondary-color: #F0EDEE;
-    --hover-color: #808080;
-    --lightGray-color: #7D7B7D;
+    --font-base: "DM Sans", sans-serif;
+    --primary-color: #000000;
+    --secondary-color: #ffffff;
+    --hover-color: #8b8b8b;
+    --lightGray-color: #999da4;
     --lightblue-color: #12C2E9;
     --pink-color: #CC0FC6;
 }
@@ -15,4 +15,10 @@
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
