--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     z-index: 10;
-    height:55px;
+    height:60px;
     display: flex;
     align-items: center;
 
@@ -18,17 +18,19 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-    flex-direction: row;
     justify-content: center;
+
     
     a {
+        margin: 0.5rem 0.5rem;
         display: flex;
         align-items: center;
-        font-size: 1.3rem;
-        font-weight: 800;
+        font-size: 1.2rem;
+        font-weight: 900;
         color: var(--lightGray-color);
         text-decoration: none;
-        max-width: 160px;
+        max-width: 80px;
+        line-height: 18px;
     }
 }
 
@@ -50,6 +52,7 @@
             font-size: 14px;
             font-weight: 900;
             transition: all 0.3s ease-in-out;
+            margin: 0.5rem 0.5rem;
 
             &:hover {
                 color: var(--secondary-color);
