--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -99,7 +99,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-image: url('../../assets/header_background.png');
+    background-image: url('../../assets/work_background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
