--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -16,9 +16,8 @@
 }
   
    
-.app__About-title-title {
-        margin-bottom: 8px; 
-        font-size: 1.5rem;
+.app__About-title-title { 
+        font-size: 1.2rem;
         font-weight: 600;
         color: var(--lightGray-color);
         margin-bottom: 50px;
@@ -37,6 +36,7 @@
     align-items: center;
     line-height: 3rem;
     font-size: 2.1rem;
+    font-weight: 700;
     max-width: 650px;
     color: var(--secondary-color);
     
