--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
-    z-index: 1;
+    z-index: 2;
   }
   
   .app__Work-title-title {
@@ -94,15 +94,14 @@
   }
 
   .app__Work-background {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image: url('../../assets/work_background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    opacity: 0.6;
-    z-index: 0;
+    z-index: 1;
   }
