--- a/src/app.scss
+++ b/src/app.scss
@@ -1,19 +1,30 @@
 .app {
     background-repeat: no-repeat;
     font-family: var(--font-base);
-    background-color: var(--primary-color);
+   
 }
+
+/* Shared Background for Header & About */
+.app__shared-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url('/assets/andrematos_creative_photo.png'); /* Corrected path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 1;
+    z-index: 0;
+}
+
 
 .app__master-container {
     position: relative;
     margin: 0 auto;
     max-width: 1440px;
     width: 100%;
-    
-    @media screen and (max-width: 450px) {
-        /* margin-left: 1.5rem;
-        margin-right: 1.5rem; */
-    }
 }
 
 .app__flex {
