--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,10 +1,15 @@
 .app__About {
-    /* overflow: hidden; */
     position: relative;
     width: 100%;
-    user-select: none;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
 }
-  
+
+
+
 .app__About-info {
     flex: 1;
     display: flex;
@@ -14,23 +19,22 @@
     justify-content: center;
     padding-left: 100px;
 }
-  
-   
-.app__About-title-title { 
-        font-size: 1.2rem;
-        font-weight: 600;
-        color: var(--lightGray-color);
-        margin-bottom: 50px;
-      
-        @media screen and (max-width: 900px) {
-            margin-left: 1rem;
-        }
-  
-        @media screen and (max-width: 450px) {
-            font-size: 2rem;
-            margin-bottom: 8px;
-        }
+
+.app__About-title-title {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--lightGray-color);
+    margin-bottom: 50px;
+
+    @media screen and (max-width: 900px) {
+        margin-left: 1rem;
     }
+
+    @media screen and (max-width: 450px) {
+        font-size: 2rem;
+        margin-bottom: 8px;
+    }
+}
 
 .app__About-desc-container-text {
     align-items: center;
@@ -39,11 +43,11 @@
     font-weight: 700;
     max-width: 650px;
     color: var(--secondary-color);
-    
+
     @media screen and (max-width: 900px) {
         max-width: 700px;
     }
-    
+
     @media screen and (max-width: 450px) {
         line-height: 1.8rem;
         font-size: 1.1rem;
@@ -63,4 +67,3 @@
         }
     }
 }
-
