--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,12 @@
 .app__header {
   position: relative;
-  overflow: hidden;
-  user-select: none;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
+  overflow: hidden;
 }
 
 .app__header-container {
@@ -14,12 +15,13 @@
   align-items: center;
   width: 100%;
   max-width: 1300px;
-  padding-left:100px;
+  padding-left: 100px;
   position: relative;
+  z-index: 1; /* Ensures content is above background */
 
   @media screen and (max-width: 900px) {
-    flex-direction: column;
-    text-align: center;
+      flex-direction: column;
+      text-align: center;
   }
 }
 
@@ -31,33 +33,19 @@
   line-height: 6.5rem;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-  z-index: 1;
+  text-align: left;
+  z-index: 2; /* Ensures text is visible */
 
   @media screen and (max-width: 750px) {
-    font-size: 3rem;
+      font-size: 3rem;
   }
 
   @media screen and (max-width: 550px) {
-    font-size: 2rem;
-    max-width: 300px;
+      font-size: 2rem;
+      max-width: 300px;
   }
 }
 
 .light-gray {
   color: var(--lightGray-color);
-}
-
-.app__header-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-image: url('../../assets/andrematos_creative_photo.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0.6;
-  z-index: 0;
 }
