--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -2,10 +2,13 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
+  
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
   user-select: none;
+  z-index: 3;
 }
 
 .app__Work-info {
@@ -13,14 +16,15 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  z-index: 2;
+  z-index: 3;
 }
 
 .app__Work-title-title {
   font-size: 28px;
   font-weight: 600;
-  color: var(--primary-color);
+  color: var(--secondary-color);
   margin-bottom: 10px;
+  z-index: 4;
 
   @media screen and (max-width: 900px) {
       margin-left: 1rem;
@@ -38,6 +42,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 35px;
+  z-index: 3;
 }
 
 .app__Work-card {
@@ -71,27 +76,6 @@
   transform: scale(1.08);
 }
 
-.card-description {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  bottom: 0;
-  width: 96%;
-  border-radius: 7px;
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
-  font-size: 14px;
-  font-weight: 500;
-  padding: 40px;
-  transform: translateY(100%);
-  transition: transform 2s;
-
-  @media screen and (max-width: 450px) {
-      padding: 20px;
-  }
-}
-
 .app__Work-card:hover .card-description {
   transform: translateY(0);
 }
@@ -101,11 +85,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 150%;
   background-image: url('../../assets/work_background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.6;
-  z-index: 0;
+  opacity: 1;
+  z-index: -1; /* Moves it behind content */
 }
