--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -2,7 +2,7 @@
     position: relative; 
     width: 100%;
     user-select: none;
-    
+    background-color: var(--primary-color);
   }
   
   .app__Contact-info {
