--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   user-select: none;
   overflow: hidden;
+  z-index: 2;
 }
 
 .app__header-container {
@@ -17,7 +18,7 @@
   max-width: 1300px;
   padding-left: 100px;
   position: relative;
-  z-index: 1; /* Ensures content is above background */
+  z-index: 1;
 
   @media screen and (max-width: 900px) {
       flex-direction: column;
