--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,6 @@
 .app {
-    background-repeat: no-repeat;
-    font-family: var(--font-base);
    
+    font-family: var(--font-base);   
 }
 
 /* Shared Background for Header & About */
@@ -17,6 +16,7 @@
     background-repeat: no-repeat;
     opacity: 1;
     z-index: 0;
+    will-change: auto;
 }
 
 
@@ -32,3 +32,9 @@
     justify-content: center;
     align-items: center;
 }
+
+
+
+
+
+
