--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,8 +21,8 @@
   z-index: 1;
 
   @media screen and (max-width: 900px) {
-      flex-direction: column;
-      text-align: center;
+    flex-direction: column;
+    text-align: center;
   }
 }
 
@@ -35,15 +35,15 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  z-index: 2; /* Ensures text is visible */
+  z-index: 2;
 
   @media screen and (max-width: 750px) {
-      font-size: 3rem;
+    font-size: 3rem;
   }
 
   @media screen and (max-width: 550px) {
-      font-size: 2rem;
-      max-width: 300px;
+    font-size: 2rem;
+    max-width: 300px;
   }
 }
 
