--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -2,7 +2,8 @@
     position: relative; 
     width: 100%;
     user-select: none;
-    
+    background-color: var(--primary-color);
+    z-index: 2;
   }
   
   .app__Contact-info {
@@ -13,28 +14,30 @@
   }
   
   .app__Contact-title-title {
-      margin-bottom: 8px; 
-      font-size: 28px;
-      font-weight: 600;
-      color: var(--primary-color);
-      
-      @media screen and (max-width: 900px) {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--lightGray-color);
+    margin-bottom: 50px;
+    margin-top: 150px;
+    padding-left: 100px;
+
+    @media screen and (max-width: 900px) {
         margin-left: 1rem;
-      }
-  
-      @media screen and (max-width: 450px) {
+    }
+
+    @media screen and (max-width: 450px) {
         font-size: 2rem;
         margin-bottom: 8px;
         margin-top: 100px;
-      }
     }
+  }
 
 .app__Contact-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 30px;
+    padding: 50px;
 
     .app__Contact-content-form {
         display: flex;
@@ -42,17 +45,13 @@
     }
 
     &-form input, textarea {
-        color: var(--primary-color);
-        font-size: 1rem;
-        width: 500px;
-        height: 56px;
-        padding: 10px;
-        border: 2px solid var(--primary-color);
-        background-color: var(--secondary-color);
-        border-radius: 4px;
-        margin-bottom: 20px;
+        background-color: none;
+        font-size: 1.3rem;
+        height: 72px;
+        padding: 20px;
+        border: 2px solid var(--secondary-color);
+        margin-bottom: 50px;
         border-radius: 15px;
-        box-shadow: 1px 3px 5px var(--primary-color);
 
         @media screen and (max-width: 450px) {
           width: 400px;
@@ -79,7 +78,6 @@
         color: var(--primary-color);
         background-color: var(--secondary-color);
         border: 2px solid var(--primary-color);
-        box-shadow: 1px 3px 5px var(--primary-color);
         transition: all 0.2s ease-in-out;
     }
 
@@ -88,7 +86,7 @@
     }
 
   .app__Contact-content-form-message{
-    color: var(--primary-color);
+    color: var(--secondary-color);
     font-size: 2.5rem;
     
     @media screen and (max-width: 450px) {
