--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     --secondary-color: #ffffff;
     --hover-color: #8b8b8b;
     --lightGray-color: #999da4;
+    --darkGray-color: #494949;
     --background2-color: #111111;
     --lightblue-color: #12C2E9;
     --pink-color: #CC0FC6;
