--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -48,16 +48,21 @@
     &-form input, textarea {
         background-color: transparent;
         width: 100%;
-        font-size: 1.3rem;
+        font-size: 1.4rem;
         height: 72px;
         padding: 10px;
-        border: 0  0 1rem solid var(--secondary-color);
-        margin-bottom: 50px;
-        border-radius: 15px;
+        border: solid transparent;
+        color: var(--secondary-color);
 
         @media screen and (max-width: 450px) {
           width: 400px;
         }
+    }
+
+    .app__Contact-content-form-line{
+      height: 1px;
+      background-color: var(--darkGray-color);
+      margin-bottom: 60px;
     }
 
     &-form button {
@@ -65,14 +70,15 @@
         font-weight: 600;
         padding: 10px 20px;
         height: 56px;
-        color: var(--primary-color);
-        background-color: var(--lightGray-color);
+        color: var(--darkGray-color);
+        background-color: var(--background2-color);
+        border: 1px solid var(--hover-color);
         border-radius: 5px;
         cursor: pointer;
     }
 
     &-form button:hover {
-        color: var(--lightGray-color);
+        color: var(--darkGray-color);
         background-color: var(--secondary-color);
         border: 1px solid var(--primary-color);
         transition: all 0.2s ease-in-out;
