--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,5 @@
 .app__Footer {
-    background: #000000;
-    padding: 12px;
+    position: relative;
     text-align: center;
     justify-content: space-between;
     bottom: 0;
@@ -8,6 +7,8 @@
     align-items: center;
     user-select: none;
     min-height: 50px;
+    background-color: var(--background2-color);
+    z-index: 5;
 
     @media screen and (max-width: 450px) {
       padding: 0px;
@@ -16,12 +17,18 @@
     }
 }
 
+.app__footer-content-form-line {
+  height: 1px;
+  background-color: var(--darkGray-color);
+}
+
 .app__footer--content {
     align-items: center;
     display: flex;
     justify-content: space-between;
     color: var(--secondary-color);
-    font-size: 14px;
+    font-size: 0.8rem;
+    padding: 10px;
 
     @media screen and (max-width: 450px) {
       font-size: 0.85rem;
@@ -33,7 +40,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    font-size: 14px;
+    font-size: 0.8rem;
 
     @media screen and (max-width: 450px) {
       font-size: 0.85rem;
@@ -42,7 +49,7 @@
 }
 
   .app__footer-logo img{
-    width: 45px;
+    width: 40px;
     margin-left: 24px;
 
     @media screen and (max-width: 450px) {
