--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -48,14 +48,14 @@
 }
 
 .app__Work-card {
-  padding: 10px;
+  //padding: 10px;
   cursor: pointer;
   position: relative;
   width: 100%;
   height: 250px;
   margin: 16px;
   overflow: hidden;
-  border:  3px solid var(--secondary-color);
+  border:  1px solid var(--lightGray-color);
 
   @media screen and (max-width: 450px) {
       width: 380px;
