--- a/src/app.scss
+++ b/src/app.scss
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-image: url('/assets/andrematos_creative_photo.png'); /* Corrected path */
+    background-image: url('/assets/andrematos_creative_photo.png'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
