--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -70,9 +70,9 @@
         font-weight: 600;
         padding: 10px 20px;
         height: 56px;
-        color: var(--darkGray-color);
+        color: var(--lightGray-color);
         background-color: var(--background2-color);
-        border: 1px solid var(--hover-color);
+        border: 1px solid var(--darkGray-color);
         border-radius: 5px;
         cursor: pointer;
     }
