--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  flex-direction: column;
   user-select: none;
   z-index: 3;
 }
@@ -15,7 +16,8 @@
   min-height: 100vh;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 100px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
   z-index: 3;
 }
 
@@ -24,7 +26,7 @@
     font-size: 1rem;
     font-weight: 600;
     color: var(--lightGray-color);
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     margin-top: 150px;
     padding-left: 200px;
 
@@ -43,7 +45,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 35px;
+  margin: 0 auto;
+  width: 100%;
   z-index: 3;
 }
 
@@ -55,7 +58,8 @@
   height: 250px;
   margin: 16px;
   overflow: hidden;
-  border:  1px solid var(--lightGray-color);
+  border-top:  1px solid var(--darkGray-color);
+  border-bottom:  1px solid var(--darkGray-color);
 
   @media screen and (max-width: 450px) {
       width: 380px;
@@ -68,7 +72,9 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
-  transition: transform 1s;
+  display: flex;
+  justify-content: center;
+  transition: transform 1s opacity 0.4s ease-in-out;
   border-radius: 7px;
 }
 
