--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -97,5 +97,5 @@
   background-position: center;
   background-repeat: no-repeat;
   opacity: 1;
-  z-index: -1; /* Moves it behind content */
+  z-index: 1;
 }
