--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -11,6 +11,10 @@
 .app__navbar-all {
     display: flex;
     justify-content: space-between;
+    align-items: center;  
+    width: 100%;
+    padding: 0 2rem;  
+    position: relative;
 }
 
 .app__navbar-logo {
@@ -35,9 +39,14 @@
             color: var(--secondary-color);
         }
     }
+
+    @media screen and (max-width: 450px) {
+        a{
+            font-size: 1rem;
+            line-height: 15px;
+        }        
+    }
 }
-
-
 
 .app__navbar-links {
     display: flex;
@@ -73,7 +82,8 @@
                 width: 100%;
                 height: 1.4px; 
                 background-color: var(--lightGray-color);
-                    transform: scaleX(1);
+                
+                transform: scaleX(1);
             }
         }
     }
@@ -84,12 +94,13 @@
 }
 
 .app__navbar-menu {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    position: relative;
-    display:flex;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 40px;
+    width: 40px;
+
 
     svg {
         width: 80%;
