--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   flex-direction: column;
   user-select: none;
-  z-index: 3;
+
 }
 
 .app__Work-info {
@@ -22,13 +22,14 @@
 }
 
 .app__Work-title-title {
-    
+    position: relative;
     font-size: 1rem;
     font-weight: 600;
     color: var(--lightGray-color);
-    margin-bottom: 0px;
-    margin-top: 150px;
+    margin-bottom: 100px;
+    margin-top: 160px;
     padding-left: 200px;
+    z-index: 3;
 
   @media screen and (max-width: 900px) {
       margin-left: 1rem;
@@ -67,17 +68,37 @@
   }
 }
 
-.app__Work-card .card-image {
+.app__Work-card {
   width: 100%;
-  height: 100%;
+  height: 250px;
   object-fit: cover;
-  object-position: center;
   display: flex;
   justify-content: center;
-  transition: transform 1s opacity 0.4s ease-in-out;
-  border-radius: 7px;
+  flex-direction: column;
+  transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
+  z-index: 2;
 }
 
+.card-1{
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--lightGray-color);
+  margin-left: 200px;
+}
+
+.card-description{
+  margin-left: 200px;
+  color: var(--lightGray-color)
+}
+
+.app__Work-card:hover .card-1 {
+  content: url('../../assets/card_2hover.png');
+  transform: scale(1.06);
+  z-index: 3;
+  
+}
+
+/*
 .app__Work-card:hover .card-image {
   transform: scale(1.08);
 }
@@ -85,7 +106,7 @@
 .app__Work-card:hover .card-description {
   transform: translateY(0);
 }
-
+*/
 .app__Work-background {
   position: absolute;
   top: 0;
