--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -42,7 +42,15 @@
 
     @media screen and (max-width: 450px) {
         a{
+            margin: 1.5rem 0.5rem;
             font-size: 1rem;
+            line-height: 15px;
+        }        
+    }
+    @media screen and (max-width: 900px) {
+        a{
+            margin: 1rem 0.3rem;    
+            font-size: 1.2rem;
             line-height: 15px;
         }        
     }
