--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,6 +23,11 @@
   @media screen and (max-width: 900px) {
     flex-direction: column;
     text-align: center;
+    padding-left: 100px;
+  }
+
+  @media screen and (max-width: 450px) {
+    padding-left: 0px;
   }
 }
 
@@ -37,12 +42,14 @@
   text-align: left;
   z-index: 2;
 
-  @media screen and (max-width: 750px) {
-    font-size: 3rem;
+  @media screen and (max-width: 900px) {
+    font-size: 4.5rem;
+    line-height: 5rem;
   }
 
-  @media screen and (max-width: 550px) {
-    font-size: 2rem;
+  @media screen and (max-width: 450px) {
+    font-size: 2.5rem;
+    line-height: 3.5rem;
     max-width: 300px;
   }
 }
