--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -44,6 +44,7 @@
 @media screen and (max-width: 900px) {
     .app__navbar-logo 
         a {
+            font-size: 1.5rem;
             margin: 1rem 1rem;            
         }
 }
