--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,14 +21,12 @@
   
 
   @media screen and (max-width: 900px) {
-    flex-direction: column;
-    text-align: center;
-    padding-left: 0px;
+    padding-left: 1.5rem;
     
   }
 
   @media screen and (max-width: 450px) {
-
+    padding-left: 1.2rem;
   }
 }
 
@@ -46,12 +44,13 @@
   @media screen and (max-width: 900px) {
     font-size: 4.5rem;
     line-height: 5.5rem;
+    
   }
 
   @media screen and (max-width: 450px) {
-    font-size: 2.3rem;
-    line-height: 3rem;
-    max-width: 500px;
+    font-size: 2.6rem;
+    line-height: 3.2rem;
+    
   }
 }
 
