--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
     --font-base: "poppins", sans-serif;
     --primary-color: #000000;
     --secondary-color: #ffffff;
-    --hover-color: #8b8b8b;
+    --hover-color: #b3b3b3;
     --lightGray-color: #999da4;
     --darkGray-color: #333333;
     --background2-color: #111111;
