--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -18,13 +18,15 @@
     z-index: 2;
     justify-content: center;
     padding-left: 200px;
+    padding-top: 10rem;
 
     @media screen and (max-width: 900px) {
-        padding-left: 50px;
+        padding-left: 3rem;
     }
 
     @media screen and (max-width: 450px) {
-        padding-left: 30px;
+        padding-left: 1.5rem;
+        padding-top: 4rem;
     }
 }
 
@@ -35,11 +37,11 @@
     margin-bottom: 50px;
 
     @media screen and (max-width: 900px) {
-    
+        font-size: 0.8rem;
     }
 
     @media screen and (max-width: 450px) {
-        font-size: 0.8rem;
+        font-size: 0.6rem;
         margin-bottom: 15px;
     }
 }
@@ -49,11 +51,11 @@
     line-height: 3rem;
     font-size: 2rem;
     font-weight: 700;
-    max-width: 650px;
+    max-width: 600px;
     color: var(--secondary-color);
 
     @media screen and (max-width: 900px) {
-        max-width: 700px;
+        
     }
 
     @media screen and (max-width: 450px) {
@@ -61,6 +63,15 @@
         line-height: 2rem;
         max-width: 100%;
         padding-right: 15px;
+    }
+
+    &-secondary {
+        padding-top: 2rem;
+        line-height: 2rem;
+        font-size: 1rem;
+        font-weight: 600;
+        max-width: 600px;
+        color: var(--lightGray-color);
     }
 }
 
@@ -70,10 +81,15 @@
     a {
         margin-right: 20px;
         font-size: 27px;
-        color: var(--secondary-color);
+        color: var(--lightGray-color);
 
         &:hover {
-            color: var(--hover-color);
+            color: var(--secondary-color);
+        }
+
+        @media screen and (max-width: 450px) {
+            margin-right: 15px;
+            font-size: 23px;
         }
     }
 }
