--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,7 +21,8 @@
   
 
   @media screen and (max-width: 900px) {
-    padding-left: 1.5rem;
+    padding-top: 13rem;
+    padding-left: 3rem;
     
   }
 
@@ -42,14 +43,15 @@
   z-index: 2;
 
   @media screen and (max-width: 900px) {
-    font-size: 4.5rem;
-    line-height: 5.5rem;
-    
+    font-size: 4.3rem;
+    line-height: 5rem;
+    font-weight: 700;
   }
 
   @media screen and (max-width: 450px) {
-    font-size: 2.6rem;
-    line-height: 3.2rem;
+    font-size: 2.8rem;
+    line-height: 3.5rem;
+    font-weight: 700;
     
   }
 }
