--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -22,13 +22,13 @@
     padding-left: 200px;
 
     @media screen and (max-width: 900px) {
-        margin-left: 1rem;
+      padding-left: 1rem;
     }
 
     @media screen and (max-width: 450px) {
-        font-size: 2rem;
-        margin-bottom: 8px;
-        margin-top: 100px;
+      font-size: 0.6rem;
+      margin-bottom: 15px;
+      margin-top: 80px;
     }
   }
 
@@ -54,7 +54,12 @@
         border: solid transparent;
         color: var(--secondary-color);
 
+        @media screen and (max-width: 900px) {
+          padding-left: 1rem;
+        }
+    
         @media screen and (max-width: 450px) {
+          font-size: 1rem;
           width: 400px;
         }
     }
