--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
     --primary-color: #000000;
     --secondary-color: #ffffff;
     --hover-color: #b3b3b3;
-    --lightGray-color: #999da4;
+    --lightGray-color: #858585;
     --darkGray-color: #333333;
     --background2-color: #111111;
     --lightblue-color: #12C2E9;
