--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,8 +12,8 @@
 
     @media screen and (max-width: 450px) {
       padding: 0px;
-      padding-top: 20px;
-      padding-bottom: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
 }
 
@@ -26,12 +26,12 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-    color: var(--secondary-color);
+    color: var(--lightGray-color);
     font-size: 0.8rem;
-    padding: 10px;
+    padding-top: 10px;
 
     @media screen and (max-width: 450px) {
-      font-size: 0.85rem;
+      font-size: 0.65rem;
       flex-direction: column;
     }
 }
@@ -43,7 +43,7 @@
     font-size: 0.8rem;
 
     @media screen and (max-width: 450px) {
-      font-size: 0.85rem;
+      font-size: 0.65rem;
       padding-top: 10px;
     }
 }
@@ -53,7 +53,7 @@
     margin-left: 24px;
 
     @media screen and (max-width: 450px) {
-      width: 45px;
+      width: 30px;
       margin-left: 12px;
     }
 }
