--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -21,7 +21,7 @@
   z-index: 3;
 }
 
-.app__Work-title-title {
+.app__Work-title {
     position: relative;
     font-size: 1rem;
     font-weight: 600;
@@ -52,6 +52,7 @@
   margin: 0 auto;
   width: 100%;
   z-index: 3;
+  padding-bottom: 80px;
 }
 
 .app__Work-card {
