--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,6 +9,8 @@
     min-height: 50px;
     background-color: var(--background2-color);
     z-index: 5;
+    padding-right: 20px;
+    padding-left: 20px;
 
     @media screen and (max-width: 450px) {
       padding: 0px;
@@ -44,13 +46,13 @@
 
     @media screen and (max-width: 450px) {
       font-size: 0.65rem;
-      padding-top: 10px;
+      padding-top: 5px;
     }
 }
 
   .app__footer-logo img{
-    width: 40px;
-    margin-left: 24px;
+    width: 35px;
+    margin-left: 10px;
 
     @media screen and (max-width: 450px) {
       width: 30px;
