--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,40 +1,47 @@
 .app__about {
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100vh;  
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    user-select: none;
     overflow: hidden;
-    padding-top: 10rem;
+    flex-direction: column;
+    user-select: none;
     z-index: 2;
+}
 
-    @media screen and (max-width: 900px) {
-        padding-top: 5rem;
-    }
 
-    @media screen and (max-width: 450px) {
-        padding-top: 4rem;
-    }
+.app__about-info {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    z-index: 3;
 }
 
 .app__about-title {
+    position: relative;
     font-size: 1rem;
     font-weight: 600;
     color: var(--lightGray-color);
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+    padding-top: 10rem;
     padding-left: 200px;
+    z-index: 3;
 
     @media screen and (max-width: 900px) {
-        padding-left: 1rem;
+        padding-left: 3rem;
+        font-size: 0.8rem;
     }
 
     @media screen and (max-width: 450px) {
+        padding-left: 1.2rem;
+        padding-top: 8rem;
         font-size: 0.6rem;
         margin-bottom: 15px;
-        padding-left: 0;
     }
 }
 
@@ -46,11 +53,15 @@
     font-weight: 700;
     color: var(--secondary-color);
 
+    @media screen and (max-width: 900px) {
+        padding-left: 3rem;
+    }
+
     @media screen and (max-width: 450px) {
         font-size: 1.3rem;
         line-height: 2rem;
         padding-right: 15px;
-        padding-left: 15px;
+        padding-left: 1.2rem;
     }
 }
 
