--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
     --darkGray-color: #333333;
     --background2-color: #111111;
     --lightblue-color: #12C2E9;
-    --pink-color: #CC0FC6;
+    --pink-color: #cc0fc600;
+    --background3-color: #00000000;
 }
 
 * {
