--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -27,7 +27,7 @@
     font-weight: 600;
     color: var(--lightGray-color);
     margin-bottom: 100px;
-    padding-top: 10rem;
+    padding-top: 7rem;
     padding-left: 200px;
     z-index: 3;
 
@@ -52,7 +52,7 @@
   margin: 0 auto;
   width: 100%;
   z-index: 3;
-  padding-bottom: 80px;
+  padding-bottom: 8rem;
 }
 
 .app__Work-card {
