--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -124,8 +124,12 @@
   font-weight: 700;
   margin-left: 200px;
 
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: 900px) {
     font-size: 2rem;
+  }
+
+  @media screen and (max-width: 450px) {
+    font-size: 1.5rem;
     margin-left: 1.5rem;
   }
 }
