--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     --lightblue-color: #12C2E9;
     --pink-color: #cc0fc600;
     --background3-color: #00000000;
+    --green-color: #00b371;
 }
 
 * {
