--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -29,7 +29,7 @@
     position: relative;
     font-size: 1rem;
     font-weight: 600;
-    color: var(--lightGray-color);
+    color: var(--green-color);
     margin-bottom: 60px;
     padding-left: 200px;
     padding-top: 60px;
@@ -92,7 +92,7 @@
 
 .app__about-icon {
     font-size: 27px;
-    color: var(--lightGray-color);
+    color: var(--green-color);
     transition: color 0.3s ease-in-out;
 
     &:hover {
