--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -16,7 +16,7 @@
   .app__contact-title {
     font-size: 1rem;
     font-weight: 600;
-    color: var(--lightGray-color);
+    color: var(--green-color);
     margin-bottom: 100px;
     margin-top: 90px;
     padding-left: 200px;
