--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -22,22 +22,26 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    
+    position: relative;
+    padding: 3rem 4rem;
+
     a {
         text-decoration: none;
         font-size: 1.5rem;
         font-weight: 700;
         color: var(--lightGray-color);
-        margin: 3rem 4rem;
-        transition: color 0.3s ease-in-out;
-        width : 90px;
+        transition: color 0.7s ease-in-out;
+        width: 105px;
         line-height: 22px;
 
         &:hover {
-            color: var(--secondary-color);
+            color: var(--green-color);
         }
     }
 }
+
+
+
 
 @media screen and (max-width: 900px) {
     .app__navbar-logo 
@@ -73,30 +77,38 @@
             text-decoration: none;
             font-size: 1rem;
             font-weight: 700;
-            transition: all 0.3s ease-in-out;
+            transition: all 0.5s ease-in-out;
+            position: relative;
 
             &:hover {
                 color: var(--secondary-color);
             }
         }
 
-        a.active {
-            position: relative;
-            
-            &:after {
-                content: '';
-                position: absolute;
-                left: 0;
-                bottom: -3px; 
-                width: 100%;
-                height: 1.4px; 
-                background-color: var(--lightGray-color);
-                transform: scaleX(1);
-            }
+        a::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -3px;
+            width: 100%;
+            height: 2px;
+            background-color: var(--green-color);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        a.active::after {
+            transform: scaleX(1);
+            transform-origin: left;
+        }
+
+        a:not(.active)::after {
+            transform-origin: right;
         }
     }
-    
 }
+
 
 @media screen and (max-width: 1080px) {
     .app__navbar-links {
