--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -38,7 +38,7 @@
   position: relative;
   font-size: 1rem;
   font-weight: 600;
-  color: var(--lightGray-color);
+  color: var(--green-color);
   margin-bottom: 100px;
   padding-top: 7rem;
   padding-left: 200px;
