--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,3 @@
-
-
 .app__navbar {
     user-select: none;
     position: fixed;
@@ -23,7 +21,6 @@
     justify-content: center;
     cursor: pointer;
     position: relative;
-    padding: 3rem 4rem;
 
     a {
         text-decoration: none;
@@ -33,6 +30,7 @@
         transition: color 0.7s ease-in-out;
         width: 105px;
         line-height: 22px;
+        padding: 2rem 2rem;
 
         &:hover {
             color: var(--green-color);
@@ -40,14 +38,16 @@
     }
 }
 
-
+.app__navbar-logo.work-page a {
+    color: black !important;
+}
 
 
 @media screen and (max-width: 900px) {
     .app__navbar-logo 
     a {
         font-size: 1.4rem;
-        margin: 1.5rem 1.5rem;
+        padding: 1.6rem 1.6rem;
         line-height: 21px; 
     }
 }
@@ -56,8 +56,26 @@
     .app__navbar-logo 
     a {
         font-size: 1.1rem;
-        margin: 1.2rem 1.2rem;
+        padding: 1rem 1.2rem;
         line-height: 17px;
+    }
+}
+
+.app__navbar-close-icon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+
+    svg {
+        width: 30px;
+        height: 30px;
+        color: black;
+        transition: color 0.3s ease-in-out;
+
+        &:hover {
+            color: var(--secondary-color);
+        }
     }
 }
 
@@ -136,12 +154,11 @@
 
         @media screen and (max-width: 900px) {
             width: 45px;
-            height: 45px;
-            padding-right: 10px;             
+            padding-right: 1rem;             
         }
         
         @media screen and (max-width: 450px) {            
-            width: 30px;
+            width: 27px;
             padding-right: 0px; 
         }
     }
