--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     --lightblue-color: #12C2E9;
     --pink-color: #cc0fc600;
     --background3-color: #00000000;
-    --green-color: #00b371;
+    --green-color: #00ce82;
 }
 
 * {
