--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -39,7 +39,7 @@
   font-size: 1rem;
   font-weight: 600;
   color: var(--green-color);
-  margin-bottom: 100px;
+  padding-bottom: 7rem;
   padding-top: 7rem;
   padding-left: 200px;
   z-index: 3;
@@ -51,9 +51,9 @@
 
   @media screen and (max-width: 450px) {
     padding-left: 1.2rem;
-    padding-top: 8rem;
+    padding-top: 4rem;
     font-size: 0.6rem;
-    margin-bottom: 15px;
+    padding-bottom: 4rem;
   }
 }
 
